<resources>
    <string name="lblPerfil">Nivelación de perfil</string>
    <string name="lblDiferencial">Nivelación diferencial</string>
    <string name="app_name">PREVIEWPLACE</string>
    <string name="btnDiferencial">Nivelación diferencial</string>
    <string name="btnConfiguracion">Configuración</string>
    <string name="btnTema">Tema</string>
    <string name="btnIdioma">Idioma</string>
    <string name="btnAyuda">Ayuda y comentarios</string>
    <string name="btnAcerca">Acerca de PREVIEWPLACE</string>
    <string name="swContraseña">Contraseña de aplicación</string>
    <string name="lblSeguridad">Seguridad</string>
    <string name="lblPersonalización">Personalización (Temas de pantalla)</string>
    <string name="lblConfiguración">Configuraciones del sistema</string>
    <string name="lblConfiguraciónes">Configuraciones</string>
    <string name="item1">Tema 1</string>
    <string name="item2">Tema 2</string>
    <string name="lblpv">Punto visado (P.V.)</string>
    <string name="lblmas">Val. Positivo (+)</string>
    <string name="lblmenos">Val. Negativo (-)</string>
    <string name="lblOpciones">Opciones</string>
    <string name="itmAgregar">Agregar</string>
    <string name="itmEditar">Editar</string>
    <string name="itmEliminar">Eliminar (Ultimo agregado)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="slBnI">Banco de nivel inicial</string>
    <string name="slBnIn">Banco de nivel intermedio</string>
    <string name="slBnPl">Banco de nivel / Punto de liga</string>
    <string name="slBnF">Banco de nivel final</string>
    <string name="slPl">Punto de liga</string>
    <string name="slCadenamiento">Cadenamiento</string>
    <string name="add_title">Seleccione una opción</string>
    <string name="edit_title">Selecione punto visado a editar</string>
    <string name="lblAtras">Lectura de atras</string>
    <string name="lblAdelante">Lectura de adelante</string>
    <string name="lblCotaI">Cota inicial</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="msgFloat">Solo se aceptan numeros</string>
    <string name="msgFaltaBN1">No se ha agregado BN1 o ya se agrego un final</string>
    <string name="msgJuntos">No puede haber dos bancos de nivel juntos</string>
    <string name="msgJuntos1">No puede haber dos puntos de liga juntos</string>
    <string name="msgBN1">No se puede agregar otro banco de nivel inicial</string>
    <string name="msgBNF">No se puede agregar banco de nivel final</string>
    <string name="msgEditar">No se han agregado valores</string>
    <string name="Actualizar">Se han aplicado los cambios correctamente</string>
    <string name="erActualizar">Algo salio mal</string>
    <string name="msjEliminarT">Se ha eliminado correctamente</string>
    <string name="msjEliminarF">No se ha podido eliminar</string>
    <string name="ndResultado">Sumatoria: </string>
    <string name="ndDesnivel">Desnivel: </string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnCompartir">Compartir</string>
    <string name="btnCerrar">Cerrar</string>
    <string name="btnExportar">PDF</string>
    <string name="ndResultadop">Sumatoria positiva: </string>
    <string name="ndResultadon">Sumatoria negativa: </string>
    <string name="nosotros">Generado por PREVIEWPLACE</string>
    <string name="msjEnviar">Compartir en</string>
    <string name="msjPdf">No se ha podido generar PDF</string>
    <string name="msjSPDF">No se ha podido compartir PDF</string>
    <string name="msjOPDF">No se ha podido abrir PDF</string>
    <string name="btnNuevo">Nuevo</string>
    <string name="btnBorrar">Borrar</string>
    <string name="lblNombre">Nombre del archivo</string>
    <string name="msjError">Nombre invalido</string>
    <string name="msjBorrar">¿Seguro que desea borrar?</string>
    <string name="msjError_sistema">Algo ha salido mal</string>
    <string name="msjMemoria">La memoria no esta disponible o es de solo lectura</string>
    <string name="msjGuardar">Los datos se han guardado correctamente</string>
    <string name="msjError_nombre2">Error: Nombre de archivo no invalido o archivo existente</string>
    <string name="btnAbrir">Abrir</string>
    <string name="msjError_abrir">Error al intentar abrir</string>
    <string name="msjError_cargando">Error al intentar cargar archivos</string>
    <string name="msjError_tipos">Error de conversión de tipos</string>
    <string name="lblAltura">Altura del aparato</string>
    <string name="lblCota">Cota</string>
    <string name="KM">000 km</string>
    <string name="M">000 m</string>
    <string name="lbl_salir">Salir</string>

    <string name="label_beneficios">
    Estos son algunos beneficios de trabajar con PREVIEWPLACE:
    \n •Apoyo para trabajos topográficos en donde no sea posible trabajar con instrumentos de alta tecnología.
    \n •Minimiza el tiempo empleado en los cálculos topográficos.
    \n •Realiza cálculos con precisión.
    \n •Obtiene una pre-visualización del lugar a describir a través de gráficas dinámicas.
    \n •Grafica con detalle los cálculos característicos del trabajo topográficos seleccionado por el usuario.
    \n •Ofrece calidad a la vista por medio de sus gráficas dinámicas.
    \n •Costo accesible
    \n •Fácil uso
    \n •Servicio de control de descargas y soporte

    </string>


    <string name="label_preguntas">
    \n¿Que es  nivelación diferencial?\nLa nivelacion de perfil se usa para determinar una línea visual horizontal utilizando un nivel óptico o condensador automático.
    Se usa un anteojo telescópico con una amplificación adecuada para leer estadales graduados, situados sobre puntos fijos.

    \n\n\n¿Qué es  nivelación de perfil?\nEl objetivo es encontrar las elevaciones de puntos a distancias conocidas, obteniéndose el perfil del terreno a lo largo de la línea de nivelación.

    \n\n\n¿Cómo crear un  proyecto nuevo?\n
    Es muy fácil solamente tienes que abrir PreviewPlace e ir al menú principal, estando hay podrás seleccionar el tema de tu preferencia dar click y ahora ingresar un nombre por ejemplo “carreteras” y a continuación estarás listo para trabajar.

    \n\n\n¿Cómo compartir un proyecto a un amigo?\n
    Al estar trabajando en PREVIEWPLACE  dar click en el menú inferior deslizando el dedo  de abajo hacia arriba y dar click en compartir, a continuación se mostraran las los diferentes maneras de envio de datos.

    \n\n\n¿Puedo exportar un proyecto a otro formato?\n
    PREVIEWPLACE ofrece la oportunidad de compartir trabajos por medio de reportes creados en formato PDF, para ello dar click  en PDf en el menú inferior de la aplicación.
    </string>
    <string name="label_acerca_pplace">
    PREVIEWPLACE es un aplicación móvil que busca facilitar trabajos topográficos de gabinete para la optimización de tiempos, capturando, calculando y graficando temas de:
    Nivelación diferencial, nivelacion de perfil, agrimensura, curvas horizontales, curvas de nivel entre otras.
    </string>

    <string name="lbltabla">Tabla</string>
    <string name="lblGrafica">Grafica</string>
    <string name="lbl_ayuda_uno">Preguntas Frecuentes </string>


    <string name="lbl_acerca_name">Acerca de PREVIEWPLACE</string>
    <string name="lbl_acerca_uno">PREGUNTAS FRECUENTES</string>
    <string name="lbl_acerca_dos"> CONTACTO Y VIDEO DEMO</string>

    <string name="lbl_ayuda_tres"> Comentarios</string>
    <string name="lbl_ayuda_cuatro"> Video demostrativo</string>
    <string name="lbl_ayuda_5">Iniciar</string>
    <string name="lbl_ayuda_6">Parar</string>


    <string name="lbl_fragment_1">NIVELACION DIFERENCIAL</string>
    <string name="lbl_fragment_2">NIVELACION DE PERFIL</string>
    <string name="lbl_fragment_3">CURVAS DE NIVEL</string>
    <string name="lbl_fragment_4">CURVAS HORIZONTALES</string>
    <string name="lbl_fragment_5">AGRIMENSURA</string>
    <string name="lbl_fragment_6">CURVAS VERTICALES </string>


    <string name="lbl_menu_1">Nivelacion diferencial</string>
    <string name="lbl_menu_2">Nivelacion de perfil</string>
    <string name="lbl_menu_3">Curvas horizontales</string>
    <string name="lbl_menu_4">Curvas verticales</string>
    <string name="lbl_menu_5">Curvas de nivel</string>
    <string name="lbl_menu_6">Agrimensura </string>


    <string name="lbl_acerca_name_dos">Como surge PREVIEWPLACE</string>
    <string name="lbl_acerca_name_cuatro">Beneficios de PREVIEWPLACE</string>
    <string name="lbl_acerca_name_cinco">



    </string>

    <string name="lbl_ACERCA_COMO">La idea de esta aplicación, surge a partir de la necesidad en estudiantes de ingeniería Civil como una herramienta necesaria para la fácil realización de cálculos topográficos y comprobaciones, además de proporcionar un apoyo a los profesionistas del área de construcción para los trabajos topográficos, donde no sea posible trabajar con instrumentos de alta tecnología (computadora, estación total, etc.) o requieran una pre-visualización del lugar a describir. Su desarrollo ha sido realizado por un grupo multidisciplinario de estudiantes del Instituto Tecnológico de Tehuacán, conformado por 2 estudiantes de Ingeniería en Sistemas Computacionales y 3 estudiantes de Ingenierías  Civil.</string>
    <string name="lbl_comentarios_name">Ayuda y comentarios</string>
    <string name="lbl_ajustes_name">Configuraciones</string>
    <string name="lblObra">OBRA: </string>
    <string name="lblLocalizacion">LOCALIZACIÓN: </string>
    <string name="lblPrevisualizacion">PREVISUALIZACIÓN</string>
    <string name="lblObraN">Pesentación en evento de inovación.</string>
    <string name="lblTipoPdf">Tipo de calculo: </string>
    <string name="lblajustes">Verificar ultima version </string>
    <string name="lblajustes_DOS">Sincronizar dispositivos</string>
    <string name="lblajustes_TRES">Tamaño de la letra </string>

    <string name="lbla_registro_us">Usuario:</string>
    <string name="lbla_registro_pass">Contraseña: </string>
    <string name="lbla_registro_1">RECORDARME</string>
    <string name="lbla_registro_2">Ingresar</string>
    <string name="lbla_registro_3"> Bienvenido</string>
    <string name="lbla_registro_4"> DISPOSITIVO: </string>

    <string name="lbla_registro_5"> El nombre de usuario o contraseña son <incorrectos class=""></incorrectos> </string>
    <string name="btnImprimir">Imprimir</string>
    <string name="title_activity_dibujo">dibujo</string>
    <string name="title_activity_ibujo">ibujo</string>


    <string-array name="datos">
        <item>SE</item>
        <item>SW</item>
        <item>NW</item>
        <item>NE</item>

    </string-array>

</resources>
