<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.protopo.previewplace.Ajustes">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSeguridad"
            android:id="@+id/textView" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            android:clickable="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swContraseña"
            android:id="@+id/switch1"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblPersonalización"
            android:id="@+id/textView1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            android:clickable="false" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:spinnerMode="dropdown" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblConfiguración"
            android:id="@+id/textView2" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            android:clickable="false" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblajustes_TRES"
            android:id="@+id/txtAcerca"
            android:textColor="#000000"
            android:clickable="true"
            android:layout_weight="0.03"
            android:contextClickable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblajustes_DOS"
            android:id="@+id/textView17"
            android:textColor="#000000"
            android:clickable="true"
            android:layout_weight="0.03"
            android:contextClickable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblajustes"
            android:id="@+id/textView20"
            android:textColor="#000000"
            android:clickable="true"
            android:layout_weight="0.03"
            android:contextClickable="true" />


    </LinearLayout>
</RelativeLayout>
