<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.protopo.previewplace.niv_dif_cont">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlTablaDiferencial"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/rlResultadosDiferencial">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/layoutTabla"
        android:gravity="center">

        <ScrollView
            android:id="@+id/scrollDiferencial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scrollDiferencialHorizontal"
                android:scrollbars="horizontal"
                android:layout_weight="1">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TableLayout
                        android:id="@+id/tabla"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                    </TableLayout>

                </LinearLayout>
            </HorizontalScrollView>

        </ScrollView>
    </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/rlResultadosDiferencial"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/horizontalScrollView" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/ndResultado"
                    android:id="@+id/textView6"
                    android:textColor="#000000"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="0.0"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/lblSumatoria_p"
                    android:id="@+id/lblSumatoria_p" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0"
                    android:id="@+id/lblSumatoria_n"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/textView5"
                    android:layout_toEndOf="@+id/textView5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/ndDesnivel"
                    android:id="@+id/textView7"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:textColor="#000000"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/lblSumatoria_n"
                    android:layout_toEndOf="@+id/lblSumatoria_n" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="0.0"
                    android:id="@+id/lblDesnivel"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/textView6"
                    android:layout_toEndOf="@+id/textView6"
                    android:elegantTextHeight="false" />
            </LinearLayout>
        </HorizontalScrollView>

    </RelativeLayout>

    <SlidingDrawer
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:content="@+id/linearLayout2"
        android:handle="@+id/button2"
        android:id="@+id/slidingDrawer2"

        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/barra">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontalScrollView2" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:weightSum="1"
                    android:padding="3dp">

                    <Button
                        android:layout_width="81dp"
                        android:layout_height="fill_parent"
                        android:text="@string/btnGuardar"
                        android:id="@+id/btnGuardar"
                        android:background="@color/transparente"
                        android:cursorVisible="false"
                        android:contextClickable="false"
                        android:drawableTop="@drawable/save"
                        android:textSize="@dimen/texto"
                        android:enabled="true"
                        android:clickable="true"
                        android:onClick="btn_guardar" />

                    <Button
                        android:layout_width="81dp"
                        android:layout_height="fill_parent"
                        android:text="@string/btnCompartir"
                        android:id="@+id/btnCompartir"
                        android:background="@color/transparente"
                        android:drawableTop="@drawable/share"
                        android:textSize="@dimen/texto"
                        android:enabled="true"
                        android:clickable="true"
                        android:onClick="compartirOnClick" />

                    <Button
                        android:layout_width="81dp"
                        android:layout_height="fill_parent"
                        android:text="@string/btnExportar"
                        android:id="@+id/btnPdf"
                        android:background="@color/transparente"
                        android:textSize="@dimen/texto"
                        android:drawableTop="@drawable/pdf"
                        android:enabled="true"
                        android:clickable="true"
                        android:onClick="pdfOnClick" />

                    <Button
                        android:layout_width="81dp"
                        android:layout_height="fill_parent"
                        android:text="@string/btnAyuda"
                        android:id="@+id/btnAcerca"
                        android:background="@color/transparente"
                        android:textSize="@dimen/texto"
                        android:drawableTop="@drawable/info" />

                    <Button
                        android:layout_width="81dp"
                        android:layout_height="fill_parent"
                        android:text="@string/btnCerrar"
                        android:id="@+id/btnCerrar"
                        android:background="@color/transparente"
                        android:textSize="@dimen/texto"
                        android:drawableTop="@drawable/exit"
                        android:enabled="true"
                        android:clickable="true"
                        android:onClick="btn_cerrar" />
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:minHeight="10dp"
            android:maxHeight="20dp"
            android:width="170dp" />
    </SlidingDrawer>

</RelativeLayout>

